<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.details.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_gray">

        <ImageView
            android:id="@+id/detailsIvAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/details_tv_name"
            style="@style/TextContent.TitleDetails"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailsIvAvatar"
            app:layout_constraintTop_toTopOf="@+id/detailsIvAvatar"
            tools:text="@string/name_placeholder" />

        <TextView
            android:id="@+id/details_tv_username"
            style="@style/TextContent.SubtitleDetails"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailsIvAvatar"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_name"
            tools:text="@string/username_placeholder" />

        <TextView
            android:id="@+id/details_tv_repository"
            style="@style/TextContent.Details"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/details_tv_gist"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_bio"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/repository" />

        <TextView
            android:id="@+id/details_tv_gist"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/details_tv_repository"
            app:layout_constraintEnd_toStartOf="@+id/details_tv_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_tv_repository"
            app:layout_constraintTop_toTopOf="@+id/details_tv_repository"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/gist" />

        <TextView
            android:id="@+id/details_tv_follower"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/details_tv_following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_tv_following"
            app:layout_constraintTop_toTopOf="@+id/details_tv_following"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/follower" />

        <TextView
            android:id="@+id/details_tv_following"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/details_tv_gist"
            app:layout_constraintEnd_toStartOf="@+id/details_tv_follower"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_tv_gist"
            app:layout_constraintTop_toTopOf="@+id/details_tv_gist"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/details_tv_company"
            style="@style/TextContent.Details"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_company"
            app:layout_constraintBottom_toTopOf="@+id/details_tv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_repository"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/company_placeholder" />

        <TextView
            android:id="@+id/details_tv_location"
            style="@style/TextContent.Details"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@+id/details_tv_blog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_company"
            tools:text="@string/location_placeholder" />

        <TextView
            android:id="@+id/details_tv_blog"
            style="@style/TextContent.Details"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_web"
            app:layout_constraintBottom_toTopOf="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_location"
            tools:text="@string/website_placeholder" />

        <TextView
            android:id="@+id/details_tv_bio"
            style="@style/TextContent.Details"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/detailsIvAvatar"
            app:layout_constraintTop_toBottomOf="@+id/detailsIvAvatar"
            tools:text="Computer Science Student, currently dwelling on android development." />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/stroke_gray"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_blog"
            app:tabIndicatorColor="@color/indicator_blue"
            app:tabTextColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primary_gray"
            android:clickable="true"
            android:contentDescription="@string/favorite_button"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_unfavorite"
            app:tint="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/primary_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs">

        </androidx.viewpager2.widget.ViewPager2>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/indicator_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>